--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -42,8 +42,8 @@ actionButton("reset", "Reset")
 numericInput("step", "Step size (power of 10)", 1, min = 1, max = 3)
 ```
 
-See page 2 tab for data generated.
-See page 3 tab for why this works.
+- See page 2 tab for data generated.
+- See page 3 tab for why this works.
 
 
 ```{r}
