--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -42,8 +42,8 @@ actionButton("reset", "Reset")
 numericInput("step", "Step size (power of 10)", 1, min = 1, max = 3)
 ```
 
-- See page 2 tab for data generated.
-- See page 3 tab for why this works.
+- See tab 2 for data generated.
+- See tab 3 tab for why this works.
 
 
 ```{r}
@@ -68,7 +68,7 @@ observeEvent(input$reset, {
 output$data = renderDataTable({values$data})
 ```
 
-Page 1
+Plot
 =====================================  
 
 ```{r}
@@ -103,13 +103,13 @@ fluidPage(
 )))
 ```
 
-Page 2
+Data
 =====================================  
 ```{r}
 dataTableOutput("data")
 ```
 
-Page 3
+Why this works
 =====================================  
 
 This is because <br>
