--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -87,14 +87,16 @@ fluidPage(
             }, height=300, width=300)),
         column(6,
             fluidPage(
-                renderText({ 
-                    paste("Counter: ", values$counter, " points added")
-                }),
                 renderText({
                     if(dim(values$data)[1] >= 1) {
                         pi_sim = 4*sum(values$data$inside==1)/length(values$data$inside)
                         paste("Simulated pi = ", round(pi_sim, 7))
+                    } else {
+                        paste("Simulation not started.")
                     }
+                }),
+                renderText({ 
+                    paste("Counter: ", values$counter, " points added")
                 }),
                 renderText({ 
                     paste("Currently: ", values$step_size, " points added at each step")
