--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -95,6 +95,7 @@ fluidPage(
             renderPlot({
                 ggplot(values$pi_sim_df, aes(x=counter, y=value)) + 
                     geom_line() +
+                    geom_hline(yintercept=pi, size=2, color="red") +
                     theme_minimal() +
                     guides(color=FALSE) +
                     xlab("Number of points") + ylab("Simulated pi value")
