--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -101,7 +101,7 @@ fluidPage(
                     geom_hline(yintercept=pi, size=2, color="red") +
                     theme_minimal() +
                     guides(color=FALSE) +
-                    xlab("Number of points") + ylab("Simulated pi value")
+                    xlab("Number of points") + ylab("Simulated pi value\n")
             }, height=300, width=300)),
         column(4,
             fluidPage(
