--- a/public-apps/circle/circle.rmd
+++ b/public-apps/circle/circle.rmd
@@ -97,8 +97,9 @@ fluidPage(
         column(4, 
             renderPlot({
                 ggplot(values$pi_sim_df, aes(x=counter, y=value)) + 
-                    geom_line() +
                     geom_hline(yintercept=pi, size=2, color="red") +
+                    geom_line() +
+                    geom_points() + 
                     theme_minimal() +
                     guides(color=FALSE) +
                     xlab("Number of points") + ylab("Simulated pi value\n")
